<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_search"
		android:contentDescription="@string/search_content_description"
		android:icon="@android:drawable/ic_menu_search"
		android:title="@string/action_search"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_overflow_menu"
		android:icon="@drawable/ic_more_vert"
		android:title="@string/action_more_options"
		app:showAsAction="always">
		<menu>
			<item
				android:id="@+id/menu_settings"
				android:title="@string/menu_settings" />
			<item
				android:id="@+id/menu_known_nodes"
				android:title="@string/menu_known_nodes" />
			<item
				android:id="@+id/menu_generate_qr_code"
				android:title="@string/menu_generate_qr" />
			<item
				android:id="@+id/menu_help_feedback"
				android:enabled="false"
				android:title="@string/menu_help_feedback" />
			<item
				android:id="@+id/menu_about"
				android:enabled="false"
				android:title="@string/menu_about" />
			<item
				android:id="@+id/menu_renew_fingerprint"
				android:title="@string/menu_renew_fingerprint" />
			<item
				android:id="@+id/chat_list_menu_quit"
				android:title="@string/menu_quit" />
		</menu>
	</item>
</menu>