<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/welcomeFragment"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/space_md"
	android:background="?attr/colorPrimary"
	android:orientation="vertical"
	android:gravity="center">

	<TextView
		android:id="@+id/welcomeTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/welcome_title"
		android:textAppearance="?attr/textAppearanceHeadlineMedium"
		android:textColor="?attr/colorSurface"
		android:textSize="@dimen/text_size_heading"
		android:textStyle="bold"
		android:textAlignment="center"
		android:layout_marginTop="@dimen/space_lg"/>

	<TextView
		android:id="@+id/instructionText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/welcome_description"
		android:textAppearance="?attr/textAppearanceBodyMedium"
		android:textColor="?attr/colorSurface"
		android:textSize="@dimen/text_size_title"
		android:textAlignment="center"
		android:layout_marginTop="@dimen/space_md"/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/nameInputLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_xl"
		app:counterEnabled="true"
		app:counterMaxLength="60"
		app:counterTextColor="@color/colorSurface"
		app:placeholderTextColor="@color/colorSurface"
		style="@style/Widget.SATMesh.TextInput"
		app:boxBackgroundMode="outline">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/nameEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username_hint"
			android:maxLength="60"
			android:inputType="textPersonName"
			android:textColor="?attr/colorOnSurface" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/continueButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/continue_button"
		style="@style/Widget.SATMesh.Button"
		android:enabled="false"
		android:layout_marginTop="@dimen/space_xl"/>

</LinearLayout>
