<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.ChatListFragment">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/chatListAppBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/chatListToolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:theme="?attr/actionBarTheme"
			app:menu="@menu/chat_list_menu"
			app:title="@string/app_name"
			app:titleTextColor="?attr/colorOnPrimary" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/conversationsRecyclerView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:clipToPadding="false"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/chatListAppBar"
		tools:listitem="@layout/item_conversation" />

	<TextView
		android:id="@+id/emptyStateTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/empty_conversations_message"
		android:textColor="?attr/colorOnSurface"
		android:textSize="18sp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/chatListAppBar"
		app:layout_constraintVertical_bias="0.3"
		tools:visibility="visible" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fabNewChat"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:contentDescription="@string/new_chat_fab_content_description"
		android:src="@drawable/ic_add_chat"
		app:backgroundTint="?attr/colorPrimary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:tint="?attr/colorOnPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>