<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/nearbyDiscoveryFragment"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.NearbyDiscoveryFragment">

	<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/nearby_discovery_app_bar"
		android:layout_width="0dp"
		android:layout_height="?attr/actionBarSize"
		android:elevation="@dimen/space_xs"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:menu="@menu/nearby_discovery_menu"
		app:title="@string/nearby_discovery_title" />

	<LinearLayout
		android:id="@+id/nearby_discovery_content"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@drawable/gradient_background"
		android:orientation="vertical"
		android:padding="@dimen/space_xs"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/nearby_discovery_app_bar">

		<TextView
			android:id="@+id/nearby_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/space_md"
			android:gravity="center"
			android:text="@string/nearby_discovery_description"
			android:textColor="@color/on_secondary"
			android:textSize="@dimen/text_size_title"
			android:textStyle="bold" />

		<ProgressBar
			android:id="@+id/progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/space_xl"
			android:indeterminate="true"
			android:indeterminateTint="@color/on_secondary"
			android:visibility="gone"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/empty_state_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/space_md"
			android:gravity="center"
			android:text="@string/no_nearby_nodes_found"
			android:textColor="@color/on_secondary"
			android:textSize="18sp"
			android:textStyle="italic"
			android:visibility="gone"
			tools:visibility="visible" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/nearby_nodes_recycler_view"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="@dimen/space_md"
			android:layout_weight="1"
			android:clipToPadding="false"
			android:paddingBottom="@dimen/space_md"
			android:visibility="gone"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			tools:listitem="@layout/item_nearby_node"
			tools:visibility="visible" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>